doc: update after playing episodes